fixed overlapping bug

--- a/flatdesign-sm.css
+++ b/flatdesign-sm.css
@@ -10,3 +10,16 @@
 .widget_flatdesign_social-media-widget a {
 	line-height: 1;
 }
+
+.clearfix {
+    zoom: 1;
+}
+
+.clearfix:before, .clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
